tests/dataset/tpc-ds/compiler/rust/q88.error
rustc: exit status 1
warning: type `Time_dim` should have an upper camel case name
 --> /tmp/q88.rs:3:8
  |
3 | struct Time_dim {
  |        ^^^^^^^^ help: convert the identifier to upper camel case: `TimeDim`
  |
  = note: `#[warn(non_camel_case_types)]` on by default

warning: type `Household_demographic` should have an upper camel case name
  --> /tmp/q88.rs:10:8
   |
10 | struct Household_demographic {
   |        ^^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `HouseholdDemographic`

warning: type `Store_sale` should have an upper camel case name
  --> /tmp/q88.rs:23:8
   |
23 | struct Store_sale {
   |        ^^^^^^^^^^ help: convert the identifier to upper camel case: `StoreSale`

error[E0308]: arguments to this function are incorrect
  --> /tmp/q88.rs:50:22
   |
50 |     let h8_30_to_9 = count_range(store_sales, time_dim, 8, 30, 60);
   |                      ^^^^^^^^^^^
   |
note: expected `Vec<i32>`, found `Vec<Store_sale>`
  --> /tmp/q88.rs:50:34
   |
50 |     let h8_30_to_9 = count_range(store_sales, time_dim, 8, 30, 60);
   |                                  ^^^^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Store_sale>`
note: expected `Vec<i32>`, found `Vec<Time_dim>`
  --> /tmp/q88.rs:50:47
   |
50 |     let h8_30_to_9 = count_range(store_sales, time_dim, 8, 30, 60);
   |                                               ^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Time_dim>`
note: function defined here
  --> /tmp/q88.rs:39:8
   |
39 |     fn count_range(ssales: Vec<i32>, tdim: Vec<i32>, hour: i32, start_min: i32, end_min: i32) -> f64 {
   |        ^^^^^^^^^^^ ----------------  --------------

error[E0308]: arguments to this function are incorrect
  --> /tmp/q88.rs:51:22
   |
51 |     let h9_to_9_30 = count_range(store_sales, time_dim, 9, 0, 30);
   |                      ^^^^^^^^^^^
   |
note: expected `Vec<i32>`, found `Vec<Store_sale>`
  --> /tmp/q88.rs:51:34
   |
51 |     let h9_to_9_30 = count_range(store_sales, time_dim, 9, 0, 30);
   |                                  ^^^^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Store_sale>`
note: expected `Vec<i32>`, found `Vec<Time_dim>`
  --> /tmp/q88.rs:51:47
   |
51 |     let h9_to_9_30 = count_range(store_sales, time_dim, 9, 0, 30);
   |                                               ^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Time_dim>`
note: function defined here
  --> /tmp/q88.rs:39:8
   |
39 |     fn count_range(ssales: Vec<i32>, tdim: Vec<i32>, hour: i32, start_min: i32, end_min: i32) -> f64 {
   |        ^^^^^^^^^^^ ----------------  --------------

error[E0308]: arguments to this function are incorrect
  --> /tmp/q88.rs:52:23
   |
52 |     let h9_30_to_10 = count_range(store_sales, time_dim, 9, 30, 60);
   |                       ^^^^^^^^^^^
   |
note: expected `Vec<i32>`, found `Vec<Store_sale>`
  --> /tmp/q88.rs:52:35
   |
52 |     let h9_30_to_10 = count_range(store_sales, time_dim, 9, 30, 60);
   |                                   ^^^^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Store_sale>`
note: expected `Vec<i32>`, found `Vec<Time_dim>`
  --> /tmp/q88.rs:52:48
   |
52 |     let h9_30_to_10 = count_range(store_sales, time_dim, 9, 30, 60);
   |                                                ^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Time_dim>`
note: function defined here
  --> /tmp/q88.rs:39:8
   |
39 |     fn count_range(ssales: Vec<i32>, tdim: Vec<i32>, hour: i32, start_min: i32, end_min: i32) -> f64 {
   |        ^^^^^^^^^^^ ----------------  --------------

error[E0308]: arguments to this function are incorrect
  --> /tmp/q88.rs:53:24
   |
53 |     let h10_to_10_30 = count_range(store_sales, time_dim, 10, 0, 30);
   |                        ^^^^^^^^^^^
   |
note: expected `Vec<i32>`, found `Vec<Store_sale>`
  --> /tmp/q88.rs:53:36
   |
53 |     let h10_to_10_30 = count_range(store_sales, time_dim, 10, 0, 30);
   |                                    ^^^^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Store_sale>`
note: expected `Vec<i32>`, found `Vec<Time_dim>`
  --> /tmp/q88.rs:53:49
   |
53 |     let h10_to_10_30 = count_range(store_sales, time_dim, 10, 0, 30);
   |                                                 ^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Time_dim>`
note: function defined here
  --> /tmp/q88.rs:39:8
   |
39 |     fn count_range(ssales: Vec<i32>, tdim: Vec<i32>, hour: i32, start_min: i32, end_min: i32) -> f64 {
   |        ^^^^^^^^^^^ ----------------  --------------

error[E0308]: arguments to this function are incorrect
  --> /tmp/q88.rs:54:24
   |
54 |     let h10_30_to_11 = count_range(store_sales, time_dim, 10, 30, 60);
   |                        ^^^^^^^^^^^
   |
note: expected `Vec<i32>`, found `Vec<Store_sale>`
  --> /tmp/q88.rs:54:36
   |
54 |     let h10_30_to_11 = count_range(store_sales, time_dim, 10, 30, 60);
   |                                    ^^^^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Store_sale>`
note: expected `Vec<i32>`, found `Vec<Time_dim>`
  --> /tmp/q88.rs:54:49
   |
54 |     let h10_30_to_11 = count_range(store_sales, time_dim, 10, 30, 60);
   |                                                 ^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Time_dim>`
note: function defined here
  --> /tmp/q88.rs:39:8
   |
39 |     fn count_range(ssales: Vec<i32>, tdim: Vec<i32>, hour: i32, start_min: i32, end_min: i32) -> f64 {
   |        ^^^^^^^^^^^ ----------------  --------------

error[E0308]: arguments to this function are incorrect
  --> /tmp/q88.rs:55:24
   |
55 |     let h11_to_11_30 = count_range(store_sales, time_dim, 11, 0, 30);
   |                        ^^^^^^^^^^^
   |
note: expected `Vec<i32>`, found `Vec<Store_sale>`
  --> /tmp/q88.rs:55:36
   |
55 |     let h11_to_11_30 = count_range(store_sales, time_dim, 11, 0, 30);
   |                                    ^^^^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Store_sale>`
note: expected `Vec<i32>`, found `Vec<Time_dim>`
  --> /tmp/q88.rs:55:49
   |
55 |     let h11_to_11_30 = count_range(store_sales, time_dim, 11, 0, 30);
   |                                                 ^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Time_dim>`
note: function defined here
  --> /tmp/q88.rs:39:8
   |
39 |     fn count_range(ssales: Vec<i32>, tdim: Vec<i32>, hour: i32, start_min: i32, end_min: i32) -> f64 {
   |        ^^^^^^^^^^^ ----------------  --------------

error[E0308]: arguments to this function are incorrect
  --> /tmp/q88.rs:56:24
   |
56 |     let h11_30_to_12 = count_range(store_sales, time_dim, 11, 30, 60);
   |                        ^^^^^^^^^^^
   |
note: expected `Vec<i32>`, found `Vec<Store_sale>`
  --> /tmp/q88.rs:56:36
   |
56 |     let h11_30_to_12 = count_range(store_sales, time_dim, 11, 30, 60);
   |                                    ^^^^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Store_sale>`
note: expected `Vec<i32>`, found `Vec<Time_dim>`
  --> /tmp/q88.rs:56:49
   |
56 |     let h11_30_to_12 = count_range(store_sales, time_dim, 11, 30, 60);
   |                                                 ^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Time_dim>`
note: function defined here
  --> /tmp/q88.rs:39:8
   |
39 |     fn count_range(ssales: Vec<i32>, tdim: Vec<i32>, hour: i32, start_min: i32, end_min: i32) -> f64 {
   |        ^^^^^^^^^^^ ----------------  --------------

error[E0308]: arguments to this function are incorrect
  --> /tmp/q88.rs:57:24
   |
57 |     let h12_to_12_30 = count_range(store_sales, time_dim, 12, 0, 30);
   |                        ^^^^^^^^^^^
   |
note: expected `Vec<i32>`, found `Vec<Store_sale>`
  --> /tmp/q88.rs:57:36
   |
57 |     let h12_to_12_30 = count_range(store_sales, time_dim, 12, 0, 30);
   |                                    ^^^^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Store_sale>`
note: expected `Vec<i32>`, found `Vec<Time_dim>`
  --> /tmp/q88.rs:57:49
   |
57 |     let h12_to_12_30 = count_range(store_sales, time_dim, 12, 0, 30);
   |                                                 ^^^^^^^^
   = note: expected struct `Vec<i32>`
              found struct `Vec<Time_dim>`
note: function defined here
  --> /tmp/q88.rs:39:8
   |
39 |     fn count_range(ssales: Vec<i32>, tdim: Vec<i32>, hour: i32, start_min: i32, end_min: i32) -> f64 {
   |        ^^^^^^^^^^^ ----------------  --------------

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
  --> /tmp/q88.rs:43:23
   |
43 |                 if ss.sold_time_sk == t.time_sk && t.hour == hour && t.minute >= start_min && t.minute < end_min {
   |                       ^^^^^^^^^^^^

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
  --> /tmp/q88.rs:43:41
   |
43 |                 if ss.sold_time_sk == t.time_sk && t.hour == hour && t.minute >= start_min && t.minute < end_min {
   |                                         ^^^^^^^

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
  --> /tmp/q88.rs:43:54
   |
43 |                 if ss.sold_time_sk == t.time_sk && t.hour == hour && t.minute >= start_min && t.minute < end_min {
   |                                                      ^^^^

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
  --> /tmp/q88.rs:43:72
   |
43 |                 if ss.sold_time_sk == t.time_sk && t.hour == hour && t.minute >= start_min && t.minute < end_min {
   |                                                                        ^^^^^^

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
  --> /tmp/q88.rs:43:97
   |
43 |                 if ss.sold_time_sk == t.time_sk && t.hour == hour && t.minute >= start_min && t.minute < end_min {
   |                                                                                                 ^^^^^^

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
  --> /tmp/q88.rs:44:33
   |
44 |                     total += ss.qty;
   |                                 ^^^

error: aborting due to 14 previous errors; 3 warnings emitted

Some errors have detailed explanations: E0308, E0610.
For more information about an error, try `rustc --explain E0308`.
